k8s-playground/caddy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
        - name: caddy-server
          image: abiosoft/caddy:1.0.3-no-stats
          command:
            - caddy
            - -conf
            - /Caddyfile
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: caddyfile-volume
              mountPath: /Caddyfile
              subPath: Caddyfile
            - name: caddyfile-volume
              mountPath: /public/hello.html
              subPath: hello.html
      volumes:
        - name: caddyfile-volume
          configMap:
            name: caddyfile
