k8s-playground/caddy/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: caddy
spec:
  selector:
    app: caddy
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
